<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EL3022" Id="{d3b0cf3d-d3b0-4137-ace9-ed3ec36236fd}">
    <Declaration><![CDATA[TYPE ST_EL3022 :
STRUCT
	
	//2-channel analog input
	rLeakTestPressureSensor	:	INT; 	//Terminal 17 SMC low differential pressure sensor
	bLeakTestSensorError	:	BOOL;	//Terminal 17 SMC low differential pressure sensor Error Flag
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>